2002-06-02  Marcus Brinkmann  <marcus@gnu.org>

	* mux.c (netfs_get_dirents): Initialize COUNT with 2, to take into
	account the DOT and DOTDOT directories when skipping over the
	first FIRST_ENTRY entries.

2002-05-13  Roland McGrath  <roland@frob.com>

	* mux.c (netfs_attempt_chmod): Handle MODE arg with no S_IFMT bits set.

	* leaf.c (create_host_node): Set NEW->nn_translated appropriately.
	* hostmux.c (main): Set netfs_root_node->nn_translated to zero.

2002-05-13  Marcus Brinkmann  <marcus@gnu.org>

	* hostmux.c (netfs_server_name, netfs_server_version): New
	variables.

2002-03-10  Neal H Walfield  <neal@cs.uml.edu>

	* mux.c (lookup_addrinfo): Renamed from lookup_hostent.  Change HE
	from a struct hostent to a struct addrinfo.
	(lookup_host): Use lookup_addrinfo, not lookup_hostent.
	Reported by James A. Morrison <ja2morri@uwaterloo.ca>.

2001-08-01  Marcus Brinkmann  <marcus@gnu.org>

	* mux.c (free_name): Swap order of memory releases.
	Reported by Kalle Olavi Niemitalo <kon@iki.fi>

2001-02-12  Marcus Brinkmann  <marcus@gnu.org>

	* hostmux.c: Include <version.h>.  Add global variable
	ARGP_PROGRAM_VERSION.  Add period to DOC.

2000-07-26  Mark Kettenis  <kettenis@gnu.org>

	* Makefile (HURDLIBS): Reorder libs such that the threads lib
	comes before the ports lib.  This makes sure the functions in
	libthreads properly override the stubs in libports with the new
	dynamic linker semantics in glibc 2.2.

1999-07-11  Roland McGrath  <roland@baalperazim.frob.com>

	* mux.c: Add #include <sys/mman.h>.

1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>

	* mux.c (netfs_get_dirents): Use mmap instead of vm_allocate.

Tue Feb 16 05:09:49 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* Makefile (MIGSTUBS): Deleted variable; neither ioServer nor
	socketServer seem to be used.

Sun Jan 31 18:34:59 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* node.c (netfs_attempt_utimes): Implement new possibility that
	ATIME or MTIME might be null.
