@@ -20,5 +20,5 @@
 
 #define USERMUX_EI
 #undef __OPTIMIZE__
-#define __OPTIMIZE__
+#define __OPTIMIZE__	1
 #include "usermux.h"
