@@ -1,3 +1,7 @@
+2004-10-23  Marcus Brinkmann  <marcus@gnu.org>
+
+	* ugids-xinl.c (__OPTIMIZE__): Define to 1 instead of nothing.
+
 2003-08-03  Marco Gerards  <metgerards@student.han.nl>
 
 	* idvec-verify.c: Include <crypt.h>.
